# GameOfLife_cpp_SFML

./: CMakeLists.txt  GameBoard.cpp  GameBoard.h  README.md  build.sh  main.cpp
